[gd_scene load_steps=16 format=3 uid="uid://cvaiev13etwvh"]

[ext_resource type="Texture2D" uid="uid://dmm3a4opwxgng" path="res://Assests/sprites/c0_hep.png" id="1_1ehe0"]
[ext_resource type="FontFile" uid="uid://dkksbtprri3ec" path="res://Assests/fonts/Jersey15-Regular.ttf" id="1_28flt"]
[ext_resource type="Script" uid="uid://cvc242q4l2pbj" path="res://Scripts/main_menu.gd" id="1_ce3w2"]
[ext_resource type="Texture2D" uid="uid://ohrn57osph64" path="res://Assests/fonts/image-removebg-preview (2).png" id="3_1ehe0"]
[ext_resource type="FontFile" uid="uid://ckq3gadchfsqs" path="res://Assests/fonts/PixelOperator8-Bold.ttf" id="5_n45e2"]
[ext_resource type="Script" uid="uid://bpq7otgksl0vn" path="res://Scripts/audio_control_slider.gd" id="6_opfnp"]
[ext_resource type="Script" uid="uid://b3v8kap8jlwlm" path="res://Scripts/full_screen_control.gd" id="7_cp0ys"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_48xlc"]
texture = ExtResource("1_1ehe0")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ehe0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ehe0"]
bg_color = Color(0.824351, 0.824351, 0.824351, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ce3w2"]
bg_color = Color(0.578618, 0.578618, 0.578618, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n45e2"]
content_margin_top = 0.0
texture = ExtResource("3_1ehe0")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_n45e2"]
color = Color(1, 1, 1, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_opfnp"]
color = Color(0.313641, 0.580638, 0.432621, 1)
thickness = 8

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ce3w2")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.712962, 0.712962, 0.712962, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_48xlc")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.332465
anchor_top = 0.462963
anchor_right = 0.667535
anchor_bottom = 0.814815
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Start" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vrkn")
text = "Start Game"

[node name="options" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vrkn")
text = "Settings"

[node name="exit" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vrkn")
text = "Exit"

[node name="Title" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -310.0
offset_right = 310.0
offset_bottom = 251.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_n45e2")

[node name="OptionsMenu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -84.0
offset_right = 350.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -257.0
offset_right = 257.0
offset_bottom = 41.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.783197, 0.860659, 0.820493, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_n45e2")
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="OptionsMenu"]
layout_mode = 2
offset_left = 157.0
offset_top = 243.0
offset_right = 543.0
offset_bottom = 304.0
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vrkn")
text = "Back
"

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.0
offset_top = -91.5
offset_right = 191.0
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Music" type="HBoxContainer" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 20

[node name="musiclabel" type="Label" parent="OptionsMenu/VBoxContainer/Music"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 30
text = "Music"

[node name="Audio Control Slider" type="HSlider" parent="OptionsMenu/VBoxContainer/Music"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxLine_n45e2")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_opfnp")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_opfnp")
max_value = 1.0
step = 0.05
value = 0.75
script = ExtResource("6_opfnp")
audio_bus_name = "Music"

[node name="SFX" type="HBoxContainer" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 45

[node name="sfxlabel" type="Label" parent="OptionsMenu/VBoxContainer/SFX"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 30
text = "SFX"

[node name="SFX Control Slider" type="HSlider" parent="OptionsMenu/VBoxContainer/SFX"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxLine_n45e2")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_opfnp")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_opfnp")
max_value = 1.0
step = 0.05
value = 0.75
script = ExtResource("6_opfnp")
audio_bus_name = "SFX"

[node name="HBoxContainer2" type="HBoxContainer" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 224

[node name="Label" type="Label" parent="OptionsMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 30
text = "Fullscreen"

[node name="FullScreen Button" type="CheckButton" parent="OptionsMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 30
button_pressed = true
script = ExtResource("7_cp0ys")

[connection signal="pressed" from="MainButtons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainButtons/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="OptionsMenu/Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="OptionsMenu/VBoxContainer/Music/Audio Control Slider" to="OptionsMenu/VBoxContainer/Music/Audio Control Slider" method="_on_value_changed"]
[connection signal="value_changed" from="OptionsMenu/VBoxContainer/SFX/SFX Control Slider" to="OptionsMenu/VBoxContainer/SFX/SFX Control Slider" method="_on_value_changed"]
[connection signal="toggled" from="OptionsMenu/VBoxContainer/HBoxContainer2/FullScreen Button" to="OptionsMenu/VBoxContainer/HBoxContainer2/FullScreen Button" method="_on_toggled"]
